--- a/Lab6/server/build.gradle
+++ b/Lab6/server/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java-library'
     id 'application'
     id("com.github.johnrengelman.shadow") version "8.1.0"
+    id 'io.freefair.lombok' version '6.5.1'
 }
 
 repositories {
@@ -18,6 +19,11 @@ dependencies {
     implementation('jakarta.xml.bind:jakarta.xml.bind-api:4.0.1')
     implementation('org.glassfish.jaxb:jaxb-runtime:4.0.4')
     implementation('jakarta.activation:jakarta.activation-api:2.1.3')
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
 tasks.register('testing') {
